force-app/main/presentation-examples/2-data-source-example/objects/OpportunityLineItem/fields/Can_Be_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>Can_Be_Cancelled__c</fullName>
    <formula>! ISPICKVAL( Fulfilment_Status__c, &apos;Fulfilled&apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Can Be Cancelled</label>
    <type>Checkbox</type>
</CustomField>