force-app/main/presentation-examples/2-data-source-example/objects/OpportunityLineItem/fields/Cancelled_On__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_On__c</fullName>
    <label>Cancelled On</label>
    <type>DateTime</type>
</CustomField>