force-app/main/presentation-examples/2-data-source-example/objects/OpportunityLineItem/fields/Fulfilled_On__c.field-meta.xml
<CustomField>
    <fullName>Fulfilled_On__c</fullName>
    <label>Fulfilled On</label>
    <type>DateTime</type>
</CustomField>