force-app/main/presentation-examples/2-data-source-example/objects/OpportunityLineItem/fields/Fulfilment_Status__c.field-meta.xml
<CustomField>
    <fullName>Fulfilment_Status__c</fullName>
    <defaultValue>&quot;Not Ordered&quot;</defaultValue>
    <label>Fulfilment Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Ordered</fullName>
            </value>
            <value>
                <fullName>Ordered</fullName>
            </value>
            <value>
                <fullName>Fulfilled</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>